# doc_scanner

./: CMakeLists.txt  LICENSE  README.md
include/: scanner.hpp
src/: main_window.cpp  scanner.cpp
